[package]
name = "Libp2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"                                                                                                                       
futures = "0.3"                                                                                                                             
libp2p = { version = "0.56", features = ["ed25519", "macros", "noise", "ping", "tcp", "tokio", "yamux"] }
tokio = { version = "1.45", features = ["full"] }




